--- a/client/src/app/auth/create-account-page/create-account-page.component.html
+++ b/client/src/app/auth/create-account-page/create-account-page.component.html
@@ -6,12 +6,21 @@
         <img src="assets/images/logo.png" class="avatar-xs mb-1" alt="">
         <p class="ff-headers text-uppercase">Create an account</p>
       </div>
-      <fieldset class="form-group" [ngClass]="{'has-danger': form.controls['uname'].hasError('required') && form.controls['uname'].touched}">
+      <fieldset class="form-group" [ngClass]="{'has-danger': form.controls['uname']['errors'] && form.controls['uname'].touched}">
         <label>
           Choose a username
         </label>
         <input type="text" class="form-control" placeholder="username" [formControl]="form.controls['uname']" [ngClass]="{'form-control-danger': form.controls['uname'].hasError('required') && form.controls['uname'].touched}"/>
         <div class="form-control-feedback" *ngIf="form.controls['uname'].hasError('required') && form.controls['uname'].touched">Username is required.</div>
+        <div class="form-control-feedback" *ngIf="form.controls['uname'].hasError('existUserName') && form.controls['uname'].touched">This username has already taken</div>
+      </fieldset>
+      <fieldset class="form-group" [ngClass]="{'has-danger': form.controls['email']['errors'] && form.controls['email'].touched}">
+        <label>
+          Email
+        </label>
+        <input type="email" class="form-control" placeholder="E-Mail" [formControl]="form.controls['email']" [ngClass]="{'form-control-danger': form.controls['email'].hasError('required') && form.controls['uname'].touched}"/>
+        <div class="form-control-feedback" *ngIf="form.controls['email'].hasError('required') && form.controls['uname'].touched">E-Mail is required.</div>
+        <div class="form-control-feedback" *ngIf="form.controls['email'].hasError('existEmail') && form.controls['email'].touched">This email has already taken</div>
       </fieldset>
       <fieldset class="form-group" [ngClass]="{'has-danger': form.controls['password'].hasError('required') && form.controls['password'].touched}">
         <label>
@@ -27,9 +36,16 @@
         <input type="password" class="form-control" placeholder="Conform" [formControl]="form.controls['confirmPassword']" [ngClass]="{'form-control-danger': form.controls['confirmPassword'].hasError('required') && form.controls['confirmPassword'].touched}"/>
         <div class="form-control-feedback" *ngIf="form.controls['confirmPassword'].hasError('required') && form.controls['confirmPassword'].touched">Confirm your password.</div>
       </fieldset>
+      <label class="custom-control custom-checkbox mb-1">
+        <input type="checkbox" class="custom-control-input" [formControl]="form.controls['teacher']">
+        <span class="custom-control-indicator"></span>
+        <span class="custom-control-description" style="font-size: x-small">Teacher Account</span>
+      </label>
+
       <div class="block mb-3"></div>
       <button class="btn btn-primary" type="submit" [disabled]="!form.valid">Create</button>
       <a class="btn btn-outline-primary btn-link" [routerLink]="['/login']">Login!</a>
+      <a class="btn btn-outline-primary btn-link" (click)="test()">Lo</a>
     </form>
   </div>
 </div>
