--- a/client/src/app/auth/user-profile/user-profile.component.html
+++ b/client/src/app/auth/user-profile/user-profile.component.html
@@ -5,12 +5,10 @@
         <div class="card-block">
           <div class="row">
             <div class="col">
-              <h4 class="ma-0"><span class="fw-400">Gerald</span> <b>Morris</b></h4>
-              <small>gerald@morris.com</small>
-              <p class="mb-2">UX Developer</p>
-              <a href="javascript:" class="mt-1 d-block">email@contact.com</a>
-              <a href="javascript:" class="mt-1 d-block">www.example.com</a>
-              <a href="javascript:" class="mt-1 d-block">+1234567890</a>
+              <h4 class="ma-0"><span class="fw-400">{{user['firstName']}}</span> <b>{{user['lastName']}}</b></h4>
+              <small>{{user['email'] || ''}}</small>
+              <p class="mb-2">{{user['username']}}</p>
+              <a href="javascript:" class="mt-1 d-block">{{user['telephone'] || ''}}</a>
             </div>
             <div class="col">
               <figure>
@@ -18,13 +16,17 @@
                   <div class="avatar-status bg-red">
                     <img src="assets/images/avatar.jpg" alt="" class="rounded-circle">
                   </div>
-                  <div class="mt-1">Account Usage</div>
+                  <div class="mt-1" *ngIf="user['accType'] == 'S'">Student Account</div>
+                  <div class="mt-1" *ngIf="user['accType'] == 'T'">Teacher Account</div>
+                  <div class="mt-1" *ngIf="user['accType'] == 'D'">Data Entry</div>
+                  <div class="mt-1" *ngIf="user['accType'] == 'A'">Admin</div>
                 </div>
-                <div class="m-1">
-                  <ngb-progressbar type="success" [value]="25"></ngb-progressbar>
-                </div>
-                <div class="text-center"><small>234Gb of 879Gb</small></div>
               </figure>
+            </div>
+            <div class="col">
+              <button class="btn btn-basic btn-block  mr-1 mb-1" (click)="openUserDetailsEditModal(editModal)">
+                <i class="fa fa-pencil"></i> Update User Details
+              </button>
             </div>
           </div>
         </div>
@@ -32,174 +34,128 @@
           <div class="row text-center">
             <div class="col">
               <h2 class="mt-0"><b>23,8K</b></h2>
-              <small>Followers</small>
+              <small>Average Score</small>
             </div>
             <div class="col">
               <h2 class="mt-0"><b>569</b></h2>
-              <small>Following</small>
+              <small>Answered Papers</small>
             </div>
             <div class="col">
               <h2 class="mt-0"><b>67</b></h2>
-              <small>Posts</small>
+              <small>Rank</small>
             </div>
           </div>
         </div>
+        <div class="card-block" *ngIf="extendedUser['school'] !== undefined">
+          <p>Student of : <strong>{{extendedUser['school'].name}}</strong></p>
+        </div>
         <div class="card-block">
           <p class="ff-headers text-uppercase mb-3"><strong>About Me</strong></p>
-          <p>Maecenas sed diam eget risus varius blandit sit amet non magna. Curabitur blandit tempus porttitor. Vestibulum id ligula porta felis euismod semper.</p>
+          <p>{{user['aboutMe']}}</p>
         </div>
       </div>
     </div>
     <div class="col-sm-8">
       <div class="card">
         <ngb-tabset class="card-tab">
-          <ngb-tab title="Activity">
-            <ng-template ngbTabContent>
-              <div class="activity-stream">
-                <div class="card">
-                  <div class="card-header">
-                    <img class="card-avatar" src="assets/images/face1.jpg">
-                    <div class="card-header-text">
-                      <div class="card-title">Received a call from Joel</div>
-                      <div class="card-subtitle">Header subtitle</div>
-                    </div>
-                  </div>
-                </div>
-                <div class="card">
-                  <div class="card-header">
-                    <img class="card-avatar" src="assets/images/avatar.jpg">
-                    <div class="card-header-text">
-                      <div class="card-title">Header title</div>
-                      <div class="card-subtitle">Header subtitle</div>
-                    </div>
-                  </div>
-                  <div class="card-block">
-                    <p>Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Donec id elit non mi porta gravida at eget metus. Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit.</p>
-                    <a href="javascript:" class="mr-1">Like</a>
-                    <a href="javascript:">Comment</a>
-                  </div>
-                </div>
-                <div class="card">
-                  <div class="card-header">
-                    <img class="card-avatar" src="assets/images/face2.jpg">
-                    <div class="card-header-text">
-                      <div class="card-title">Header title</div>
-                      <div class="card-subtitle">Added a photo</div>
-                    </div>
-                  </div>
-                  <div class="card-block">
-                    <img src="assets/images/unsplash/20.jpg" style="width: 300px">
-                  </div>
-                </div>
-                <div class="card">
-                  <div class="card-header">
-                    <img class="card-avatar" src="assets/images/face3.jpg">
-                    <div class="card-header-text">
-                      <div class="card-title">Header title</div>
-                      <div class="card-subtitle">Header subtitle</div>
-                    </div>
-                  </div>
-                  <div class="card-block">
-                    <p>Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Donec id elit non mi porta gravida at eget metus. Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit.</p>
-                  </div>
-                </div>
-                <div class="card">
-                  <div class="card-header">
-                    <img class="card-avatar" src="assets/images/face4.jpg">
-                    <div class="card-header-text">
-                      <div class="card-title">Uploaded new file</div>
-                      <div class="card-subtitle">Header subtitle</div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </ng-template>
-          </ngb-tab>
           <ngb-tab>
             <ng-template ngbTabTitle>Bio</ng-template>
             <ng-template ngbTabContent>
               <div class="card">
                 <div class="card-block">
                   <h6 class="text-uppercase mt-0 mb-3">Basic Information</h6>
+                  <div class="col-10 com-sm-12">
 
-                  <div class="row mb-2">
-                    <div class="col">
-                      <div class="d-flex justify-content-start">
-                        <span class="mr-auto">Mobile</span>
-                        <strong>+20 0593 4095</strong>
+                    <div class="form-group row" [ngClass]="{'has-danger': bioFieldsErrors['firstName']?.hasError}">
+                      <label class="col-2 col-form-label">First Name</label>
+                      <div class="col-10">
+                        <input class="form-control" type="text" [value]="user['firstName']"
+                               (blur)="editOneField('firstName', firstName.value)" #firstName>
+                        <div class="form-control-feedback" *ngIf="bioFieldsErrors['firstName']?.hasError">{{bioFieldsErrors['firstName']?.msg}}</div>
                       </div>
                     </div>
-                    <div class="col">
-                      <div class="d-flex justify-content-start">
-                        <span class="mr-auto">Extension</span>
-                        <strong>94</strong>
+
+                    <div class="form-group row" [ngClass]="{'has-danger': bioFieldsErrors['lastName']?.hasError}">
+                      <label class="col-2 col-form-label">Last Name</label>
+                      <div class="col-10">
+                        <input class="form-control" type="text" [value]="user['lastName']"
+                               (blur)="editOneField('lastName', lastName.value)" #lastName>
+                        <div class="form-control-feedback" *ngIf="bioFieldsErrors['lastName']?.hasError">{{bioFieldsErrors['lastName']?.msg}}</div>
                       </div>
                     </div>
+
+                    <div class="form-group row" [ngClass]="{'has-danger': bioFieldsErrors['telephone']?.hasError}">
+                      <label class="col-2 col-form-label">Telephone</label>
+                      <div class="col-10">
+                        <input class="form-control" [ngClass]="{'form-control-danger': bioFieldsErrors['telephone']?.hasError}"
+                               [placeholder]="telephoneMask.placeholder"
+                               [textMask]="{mask: telephoneMask.mask}"
+                               [value]="user['telephone']"
+                               (blur)="editOneField('telephone', telephone.value)" #telephone/>
+                        <div class="form-control-feedback" *ngIf="bioFieldsErrors['telephone']?.hasError">{{bioFieldsErrors['telephone']?.msg}}</div>
+                      </div>
+                    </div>
+
+                    <div class="form-group row" [ngClass]="{'has-danger': bioFieldsErrors['address']?.hasError}">
+                      <label class="col-2 col-form-label">Address</label>
+                      <div class="col-10">
+                        <textarea class="form-control"
+                                  [value]="user['address']"
+                                  (blur)="editOneField('address', address.value)"
+                                  #address
+                                  [ngClass]="{'form-control-danger': bioFieldsErrors['address']?.hasError}"
+                        ></textarea>
+                      </div>
+                    </div>
+
+                    <div class="form-group row" [ngClass]="{'has-danger': bioFieldsErrors['aboutMe']?.hasError}">
+                      <label class="col-2 col-form-label">About Me</label>
+                      <div class="col-10">
+                        <textarea class="form-control"
+                                  [value]="user['aboutMe']"
+                                  (blur)="editOneField('aboutMe', aboutMe.value)"
+                                  #aboutMe
+                                  [ngClass]="{'form-control-danger': bioFieldsErrors['aboutMe']?.hasError}"
+                        ></textarea>
+                      </div>
+                    </div>
+
                   </div>
+                </div>
+                <div class="card-block" *ngIf="user['accType'] == 'S'">
+                  <h6 class="text-uppercase mt-0 mb-3" >Student Information</h6>
+                  <div class="col-10 com-sm-12">
 
-                  <div class="row mb-2">
-                    <div class="col">
-                      <div class="d-flex justify-content-start">
-                        <span class="mr-auto">Birthday</span>
-                        <strong>30.09.67</strong>
+                    <div class="form-group row">
+                      <label class="col-2 col-form-label">District</label>
+                      <div class="col-4">
+                        <select class="form-control" [(ngModel)]="extendedUser['school'].district" (change)="selectDistrict($event.target.value)">
+                          <option [ngValue]="">District</option>
+                          <option *ngFor="let x of districtList" [value]="x">{{x}}</option>
+                        </select>
                       </div>
                     </div>
-                    <div class="col">
-                      <div class="d-flex justify-content-start">
-                        <span class="mr-auto">Country</span>
-                        <strong>South Africa</strong>
-                      </div>
-                    </div>
-                  </div>
 
-                  <div class="row mb-2">
-                    <div class="col">
-                      <div class="d-flex justify-content-start">
-                        <span class="mr-auto">Occupation</span>
-                        <strong>Assistant</strong>
+                    <div class="form-group row">
+                      <label class="col-2 col-form-label">School</label>
+                      <div class="col-10">
+                        <select class="form-control" (change)="selectSchool($event.target.value)" [(ngModel)]="extendedUser['school']._id">
+                          <option [ngValue]="">School</option>
+                          <option *ngFor="let x of schoolList" [value]="x._id">{{x.name}}</option>
+                        </select>
                       </div>
                     </div>
-                    <div class="col">
-                      <div class="d-flex justify-content-start">
-                        <span class="mr-auto">Mobile</span>
-                        <strong>+23908924</strong>
-                      </div>
-                    </div>
-                  </div>
 
-                  <div class="row mb-2">
-                    <div class="col">
-                      <div class="d-flex justify-content-start">
-                        <span class="mr-auto">Twitter</span>
-                        <strong>@mrperkins</strong>
-                      </div>
-                    </div>
-                    <div class="col">
-                      <div class="d-flex justify-content-start">
-                        <span class="mr-auto">Facebook</span>
-                        <strong>mrperkins</strong>
-                      </div>
-                    </div>
+
                   </div>
                 </div>
               </div>
             </ng-template>
           </ngb-tab>
-          <ngb-tab title="Media">
+
+          <ngb-tab title="Activity">
             <ng-template ngbTabContent>
-              <div class="card card-block mb-0 pb-0">
-                <div class="row">
-                  <div class="media-tile media-tile-footer col-lg-3 col-sm-6" *ngFor="let id of images">
-                    <figure>
-                      <img src="assets/images/unsplash/{{id}}.jpg" alt="Card image cap" class="img-fluid" />
-                      <figcaption>
-                        <h6 class="media-title fw-300">{{ id }}</h6>
-                        <small class="media-subtitle">Tile image {{ id }}</small>
-                      </figcaption>
-                    </figure>
-                  </div>
-                </div>
-              </div>
+
             </ng-template>
           </ngb-tab>
         </ngb-tabset>
@@ -207,3 +163,83 @@
     </div>
   </div>
 </div>
+
+<!--Modal to edit User Details-->
+<ng-template ngbModalContainer></ng-template>
+<ng-template #editModal let-c="close" let-d="dismiss">
+  <div class="modal-header">
+    <h6 class="modal-title">Tell us about you</h6>
+    <button type="button" class="close" aria-label="Close" (click)="d('Cross click')">
+      <span aria-hidden="true">&times;</span>
+    </button>
+  </div>
+  <form [formGroup]="userEditForm" novalidate (ngSubmit)="onUserEditSubmit()">
+    <div class="modal-body">
+
+      <div class="form-group row" [ngClass]="{'has-danger': formValidity('username')}">
+        <label class="col-3 col-form-label">User Name</label>
+        <div class="col-9">
+          <input class="form-control" type="text" formControlName="username"
+                 [ngClass]="{'form-control-danger': formValidity('username')}"/>
+          <div class="form-control-feedback" *ngIf="formValidity('username', 'required')">Required</div>
+        </div>
+      </div>
+
+      <div class="form-group row" [ngClass]="{'has-danger': formValidity('email')}">
+        <label class="col-3 col-form-label">Email</label>
+        <div class="col-9">
+          <input class="form-control" type="email" formControlName="email"
+                 [ngClass]="{'form-control-danger': formValidity('email')}"/>
+          <div class="form-control-feedback" *ngIf="formValidity('email', 'required')">Required</div>
+          <div class="form-control-feedback" *ngIf="formValidity('email', 'email')">Email Format Error</div>
+        </div>
+      </div>
+
+      <div class="form-group row" [ngClass]="{'has-danger': formValidity('firstName') }">
+        <label class="col-3 col-form-label">First Name</label>
+        <div class="col-9">
+          <input class="form-control" type="email" formControlName="firstName"
+                 [ngClass]="{'form-control-danger': formValidity('firstName')}"/>
+          <div class="form-control-feedback" *ngIf="formValidity('firstName', 'required')">Required</div>
+        </div>
+      </div>
+
+      <div class="form-group row" [ngClass]="{'has-danger': formValidity('lastName')}">
+        <label class="col-3 col-form-label">Last Name</label>
+        <div class="col-9">
+          <input class="form-control" type="email" formControlName="lastName"
+                 [ngClass]="{'form-control-danger': formValidity('lastName')}"/>
+        </div>
+      </div>
+
+      <div class="form-group row" [ngClass]="{'has-danger': formValidity('telephone')}">
+        <label class="col-3 col-form-label">Telephone</label>
+        <div class="col-9">
+          <input class="form-control" formControlName="telephone" [placeholder]="telephoneMask.placeholder"
+                 [textMask]="{mask: telephoneMask.mask}"
+                 [ngClass]="{'form-control-danger': formValidity('telephone')}"/>
+        </div>
+      </div>
+
+      <div class="form-group row" [ngClass]="{'has-danger': formValidity('address')}">
+        <label class="col-3 col-form-label">Address</label>
+        <div class="col-9">
+          <textarea formControlName="address" class="form-control"
+                    [ngClass]="{'form-control-danger': formValidity('address')}"></textarea>
+        </div>
+      </div>
+
+      <div class="form-group row" [ngClass]="{'has-danger': formValidity('aboutMe')}">
+        <label class="col-3 col-form-label">About Me</label>
+        <div class="col-9">
+          <textarea formControlName="aboutMe" class="form-control" placeholder="Tell about you"
+                    [ngClass]="{'form-control-danger': formValidity('aboutMe')}"></textarea>
+        </div>
+      </div>
+
+    </div>
+    <div class="modal-footer">
+      <button type="submit" class="btn btn-success">Save</button>
+    </div>
+  </form>
+</ng-template>
